--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,36 @@ body {
     background-color: lightgrey; /* Red */
 }
 
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #007bff;
+    color: white;
+    text-align: center;
+    padding: 10px;
+}
+
+.footer a:link {
+    color: #007bff;
+    text-decoration: none;
+}
+
+.footer a:visited {
+    color: #007bff;
+
+}
+
+.footer a:hover {
+    color: white;
+    text-decoration: none;
+}
+
+.footer a:active {
+    color: #007bff;
+}
+
 
 /* Mobile Styles */
 @media only screen and (max-width: 400px) {
