--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,18 @@
 .page {
     display: flex;
     flex-wrap: wrap;
-    border-radius: 6px;
+    width: 100%;
+    /*border-radius: 6px;*/
     background-color: #f8f9fa;
-    box-shadow: 10px 10px 5px grey;
+    /*box-shadow: 10px 10px 5px grey;*/
     /*margin: 5em;*/
 }
 
 body {
-    background-color: lightgrey; /* Red */
+    background: url('./phone-index.jpg');
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
 }
 
 .footer {
@@ -23,7 +27,7 @@ body {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: #007bff;
+    background-color: #f8f9fa;
     color: white;
     text-align: center;
     padding: 10px;
@@ -40,12 +44,29 @@ body {
 }
 
 .footer a:hover {
-    color: white;
+    color: lightblue;
     text-decoration: none;
 }
 
 .footer a:active {
     color: #007bff;
+}
+
+/* Container holding the image and the text */
+.container {
+  position: relative;
+  text-align: center;
+  color: black;
+  width: 100%;
+}
+
+/* Centered text */
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: inherit;
 }
 
 
@@ -69,13 +90,8 @@ body {
 /* Desktop Styles */
 @media only screen and (min-width: 961px) {
     .page {
-      width: 960px;
+      width: 100%;
       margin: 0 auto;
-    }
-    .feature-1,
-    .feature-2,
-    .feature-3 {
-      width: 50%;
     }
     .header {
       height: 400px;
