--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -23,33 +23,37 @@ body {
 }
 
 .footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #f8f9fa;
-    color: white;
-    text-align: center;
-    padding: 10px;
+	display:grid;
+	grid-template-columns: auto auto auto;
+        grid-gap: 1px;
+	font-size: 12px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: black; // #f8f9fa;
+  color: white;
+  text-align: center;
+  padding: 10px;
 }
 
 .footer a:link {
-    color: #007bff;
-    text-decoration: none;
+  color: white; // #007bff;
+  text-decoration: none;
 }
 
 .footer a:visited {
-    color: #007bff;
+  color: grey; // #007bff;
 
 }
 
 .footer a:hover {
-    color: lightblue;
-    text-decoration: none;
+  color: lightblue;
+  text-decoration: none;
 }
 
 .footer a:active {
-    color: #007bff;
+  color: #007bff;
 }
 
 /* Container holding the image and the text */
