--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -23,11 +22,7 @@ body {
 }
 
 .footer {
-	display:grid;
-	grid-template-columns: auto auto auto;
-        grid-gap: 1px;
-	font-size: 12px;
-  position: fixed;
+ // position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
