--- a/styles/styles.css
+++ b/styles/styles.css
@@ -142,12 +142,7 @@ body{
 }
 
 .footer {
-	display:grid;
-	grid-template-columns: auto auto auto;
-        grid-gap: 0px;
-        grid-template-rows: 40px 20px 20px 20px 20px 20px;
-	font-size: 12px;
-  position: relative;
+ // position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -155,6 +150,16 @@ body{
   color: white;
   text-align: center;
   padding: 10px;
+}
+
+.footer1 {
+  display:grid;
+	grid-template-columns: auto auto auto;
+        grid-gap: 0px;
+        grid-template-rows: 40px 20px 20px 20px 20px 20px;
+	font-size: 12px;
+  position: relative; 
+
 }
 
 .footer a:link {
@@ -235,7 +240,8 @@ h6,a{
     .header {
       height: 400px;
     }
-    .footer {
+
+    .footer1 {
       height: 400px;
       width: 100%;
     }
